# btc-keygen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: 01-threat-model.md  02-non-goals.md  03-security-assumptions.md  04-dependencies.md  05-module-layout.md  06-test-plan.md  07-release-checklist.md
site/: index.html  robots.txt  sitemap.xml  style.css
src/: address.rs  entropy.rs  keygen.rs  lib.rs  main.rs  output.rs  pubkey.rs  wif.rs
tests/: integration.rs
