[package]
name = "btc-keygen"
version = "0.0.1"
edition = "2021"
description = "Minimal offline Bitcoin key generator for cold storage"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aguimaraes/btc-keygen"
homepage = "https://aguimaraes.github.io/btc-keygen"
keywords = ["bitcoin", "keygen", "cold-storage", "offline"]
categories = ["cryptography", "command-line-utilities"]

[dependencies]
secp256k1 = { version = "0.29", features = ["rand-std"] }
bitcoin_hashes = "0.14"
bech32 = "0.11"
getrandom = "0.2"
zeroize = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[profile.release]
strip = true
lto = true
opt-level = "s"
