[package]
name = "btc-keygen"
version = "0.0.5"
edition = "2024"
rust-version = "1.94"
description = "Minimal offline Bitcoin key generator for cold storage"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aguimaraes/btc-keygen"
homepage = "https://aguimaraes.github.io/btc-keygen"
keywords = ["bitcoin", "keygen", "cold-storage", "offline"]
categories = ["cryptography", "command-line-utilities"]
exclude = ["docs/", "site/", ".github/", ".editorconfig"]

[dependencies]
secp256k1 = { version = "0.31.1", features = ["rand"] }
bitcoin_hashes = "0.20"
bech32 = "0.11"
getrandom = "0.4"
zeroize = { version = "1", features = ["derive"] }
clap = { version = "4", features = ["derive"] }


[profile.release]
strip = true
lto = true
opt-level = "s"
